@@ -120,7 +120,7 @@ $(srcdir)/cp/cfns.h: $(srcdir)/cp/cfns.gperf
 
 $(srcdir)/cp/parse.h: $(srcdir)/cp/parse.c
 $(srcdir)/cp/parse.c: $(srcdir)/cp/parse.y
-	@echo "Expect 31 shift/reduce conflicts and 58 reduce/reduce conflicts."
+	@echo "Expect 33 shift/reduce conflicts and 58 reduce/reduce conflicts."
 	cd $(srcdir)/cp && \
 	if $(BISON) $(BISONFLAGS) -d -o p$$$$.c parse.y; then \
 	  grep '^#define[ 	]*YYEMPTY' p$$$$.c >> p$$$$.h ; \
